Java 20 - Scoped Values with Real Live Code